--- a/flask1/code/templates/calcolatrice.html
+++ b/flask1/code/templates/calcolatrice.html
@@ -4,13 +4,37 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Calcolatrice</title>
+  <script>
+    async function sendData (event) {
+      event.preventDefault();
+
+      let n1 = num1.value; // stessa cosa di scrivere document.getElementById("numero1").value
+      let n2 = num2.value;
+
+      await fetch("/calcolatriceAPI",{
+        headers: {"Content-Type": "application/json",},
+        method:"POST",
+        body:JSON.stringify({
+          "num1":n1,
+          "num2":n2
+        })
+      })
+      .then((data)=>data.json())
+      .then((data)=>{
+        result.textContent=data
+      })
+    }
+  </script>
 </head>
 <body>
-  <form action="calcolatrice" method="post">
+  <form onsubmit="sendData(event)">
     <label for="num1">Inserisci il primo numero</label>
-    <input type="number" name="num1" id="num1">
+    <input type="number" name="num1" id="num1"><br>
+    <label for="num2">Inserisci il primo numero</label>
+    <input type="number" name="num2" id="num2"><br>
     <button>+</button>
+    <h2 id="result"></h2>
   </form>
 </body>
 </html>
