--- a/flask2/code/templates/index.html
+++ b/flask2/code/templates/index.html
@@ -1,35 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Lista della spesa</title>
-		<script>
-			let cart = [];
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="/static/css/style.css" />
+    <title>Lista della spesa</title>
+    <script src="/static/js/app.js"></script>
+    <script>
+      payment = () => {
+        postData("/purchase", cart);
+      };
 
-			addProduct = () => {
-				let product = prodottoTXT.value;
-				cart.push(product);
-				stampa();
-				event.preventDefault();
-			};
-			stampa = () => {
-				cartUL.innerHTML = '';
-				for (let item of cart) {
-					cartUL.innerHTML += `<li>${item}</li>`;
-				}
-			};
-		</script>
-	</head>
-	<body>
-		<form onsubmit="addProduct()">
-			<label for="prodottoTXT"
-				>Inserisci un prodotto alla lista della spesa</label
-			>
-			<input type="text" id="prodottoTXT" name="prodottoTXT" />
-			<button>Aggiungi</button>
-		</form>
-		<ul id="cartUL"></ul>
-	</body>
+      // Example POST method implementation:
+      async function postData(url = "", data = {}) {
+        // Default options are marked with *
+        const response = await fetch(url, {
+          method: "POST", // *GET, POST, PUT, DELETE, etc.
+          mode: "cors", // no-cors, *cors, same-origin
+          cache: "no-cache", // *default, no-cache, reload, force-cache, only-if-cached
+          credentials: "same-origin", // include, *same-origin, omit
+          headers: {
+            "Content-Type": "application/json",
+            // 'Content-Type': 'application/x-www-form-urlencoded',
+          },
+          redirect: "follow", // manual, *follow, error
+          referrerPolicy: "no-referrer", // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
+          body: JSON.stringify(data), // body data type must match "Content-Type" header
+        });
+        return response.json(); // parses JSON response into native JavaScript objects
+      }
+    </script>
+  </head>
+  <body>
+    <!-- <div class="blur"></div> -->
+    <form onsubmit="addProduct()">
+      <label for="prodottoTXT"
+        >Inserisci un prodotto alla lista della spesa</label
+      >
+      <input type="text" id="prodottoTXT" name="prodottoTXT" />
+      <button>Aggiungi</button>
+    </form>
+    <button onclick="save()">Salva</button>
+    <button onclick="load()">Carica</button>
+    <button onclick="payment()">Paga</button>
+    <ul id="cartUL"></ul>
+  </body>
 </html>
