--- a/IFTSnumpy/code/templates/upload.html
+++ b/IFTSnumpy/code/templates/upload.html
@@ -6,17 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+
   <body>
     <form
+      method="POST"
       action="uploader"
-      id="upload"
-      method="post"
       enctype="multipart/form-data"
+      id="upload"
     >
-      <label for="file">Select a picture</label>
-      <input multiple type="file" name="file" id="file" accept="image/*" />
-      <button type="submit">Submit</button>
+      <!-- <input type="file" id="file" name="file" accept="image/*"> -->
+      <!-- <input multiple type="file" id="file" name="file" accept="image/*"> -->
+      <input multiple type="file" id="file" name="file" />
+      <button>Invia</button>
     </form>
-    <script src="../static/js/index.js"></script>
+
+    <script>
+      file.addEventListener("change", () => {
+        console.log(file.files[0]);
+      });
+    </script>
   </body>
 </html>
